# file-converter

./: '  ''  .env.example  .gitignore  Cargo.toml  README.md
migrations/2024-09-02-003135_create_files/: up.sql
src/: converter.rs  database.rs  endpoints.rs  errors.rs  lib.rs  main.rs  models.rs  notifications.rs  response.rs  schema.rs  templates.rs  tests.rs
src/converter/: jobs.rs
src/database/: models.rs
src/endpoints/: api.rs  convert.rs  download.rs  file.rs  index.rs  mod.rs  search.rs  webhooks.rs  websocket.rs
src/endpoints/api/: convert.rs  mod.rs  response.rs  search.rs  socket.rs
src/endpoints/webhooks/: finished.rs
static/css/: 404.css  file.css  fonts.css  index.css  search.css
static/js/: encode_form.js  websocket.js
static/js/index/: encode_form.js  search_button.js  websocket.js
static/js/search/: back_button.js
templates/: 404.html  file.html  file_list.html  index.html  search.html
templates/search/: page.html  results.html
